--- a/downstream/modules/platform/ref-system-requirements.adoc
+++ b/downstream/modules/platform/ref-system-requirements.adoc
@@ -6,7 +6,7 @@
 
 Your system must meet the following minimum system requirements to install and run {PlatformName}. 
 A resilient deployment requires 10 virtual machines with a minimum of 16 gigabytes(GB) of ram and 4 virtual cpus(vCPU). 
-See, link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/tested_deployment_models[Tested deployment models] for more information on topology options.
+See, link:{LinkTopologies} for more information on topology options.
 
 
 .Base system
