AAP-30807 - Converting Overview and System requirements assemblies into repo (#1904)

--- a/downstream/assemblies/platform/assembly-platform-install-overview.adoc
+++ b/downstream/assemblies/platform/assembly-platform-install-overview.adoc
@@ -30,7 +30,9 @@ xref:proc-verify-aap-installation_platform-install-scenario[Verifying your {Plat
 
 [role="_additional-resources"]
 .Additional resources
-For more information about the supported installation scenarios, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/index[{PlatformName} Planning Guide].
+
+. For more information about the supported installation scenarios, see the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_planning_guide/index[{PlatformName} Planning Guide].
+. For more information on available topologies, see link:{LinkTopologies}. 
 
 include::platform/con-aap-installation-prereqs.adoc[leveloffset=+1]
 
