--- a/downstream/modules/platform/ref-controller-system-requirements.adoc
+++ b/downstream/modules/platform/ref-controller-system-requirements.adoc
@@ -7,68 +7,40 @@ In the installer, four node types are provided as abstractions to help you desig
 
 Use the following recommendations for node sizing:
 
-[NOTE]
-====
-On control and hybrid nodes, allocate a minimum of 20 GB to `/var/lib/awx` for {ExecEnvShort} storage.
-====
-
 *Execution nodes* 
 
 Execution nodes run automation. Increase memory and CPU to increase capacity for running more forks.
 
 [NOTE]
 ====
-* The RAM and CPU resources stated might not be required for packages installed on an execution node but are the minimum recommended to handle the job load for a node to run an average number of jobs simultaneously.
+* The RAM and CPU resources stated are minimum recommendations to handle the job load for a node to run an average number of jobs simultaneously.
 
 * Recommended RAM and CPU node sizes are not supplied.
 The required RAM or CPU depends directly on the number of jobs you are running in that environment.
 
+* For capacity based on forks in your configuration, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact]. .
+
 For further information about required RAM and CPU levels, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-improving-performance[Performance tuning for automation controller].
 ====
-
-.Execution nodes
-
-[cols="a,a",options="header"]
-|===
-h| Requirement | Minimum required
-| *RAM* | 16 GB
-| *CPUs* | 4
-| *Local disk* | 40GB minimum
-|===
 
 *Control nodes*
 
 Control nodes process events and run cluster jobs including project updates and cleanup jobs. Increasing CPU and memory can help with job event processing.
 
-.Control nodes
+Control nodes have the following storage requirements:
 
-[cols="a,a",options="header"]
-|===
-h| Requirement | Minimum required
-| *RAM* | 16 GB
-| *CPUs* | 4
-| *Local disk* a|
 * 40GB minimum with at least 20GB available under /var/lib/awx
 * Storage volume must be rated for a minimum baseline of 1500 IOPS
 * Projects are stored on control and hybrid nodes, and for the duration of jobs, are also stored on execution nodes. If the cluster has many large projects, consider doubling the GB in /var/lib/awx/projects, to avoid disk space errors.
-|===
 
 *Hop nodes*
 
 Hop nodes serve to route traffic from one part of the {AutomationMesh} to another (for example, a hop node could be a bastion host into another network). RAM can affect throughput, CPU activity is low. Network bandwidth and latency are generally a more important factor than either RAM or CPU.
 
-.Hop nodes
-
-[cols="a,a",options="header"]
-|===
-h| Requirement | Minimum required
-| *RAM* | 16 GB
-| *CPUs* | 4
-| *Local disk* | 40 GB
-|===
-
-* Actual RAM requirements vary based on how many hosts {ControllerName} will manage simultaneously (which is controlled by the `forks` parameter in the job template or the system `ansible.cfg` file).
-To avoid possible resource conflicts, Ansible recommends 1 GB of memory per 10 forks and 2 GB reservation for {ControllerName}. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact]. If `forks` is set to 400, 42 GB of memory is recommended.
+* Actual RAM requirements vary based on how many hosts {ControllerName} manages simultaneously (which is controlled by the `forks` parameter in the job template or the system `ansible.cfg` file).
+To avoid possible resource conflicts, Ansible recommends 1 GB of memory per 10 forks and 2 GB reservation for {ControllerName}.
+See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_user_guide/controller-jobs#controller-capacity-determination[{ControllerNameStart} capacity determination and job impact]. 
+If `forks` is set to 400, 42 GB of memory is recommended.
 * {ControllerNameStart} hosts check if `umask` is set to 0022. If not, the setup fails. Set `umask=0022` to avoid this error.
 * A larger number of hosts can be addressed, but if the fork number is less than the total host count, more passes across the hosts are required. You can avoid these RAM limitations by using any of the following approaches:
 ** Use rolling updates.
