--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -157,11 +157,11 @@ ansible-playbook -i inventory.yml install_receptor.yml
 ----
 [Note]
 ====
-OpenSSL is required for this playbook you can verify it is installed via: 
+OpenSSL is required for this playbook. You can install it by running the following command: 
 ----
 openssl -v 
 ----
-If it returns a version OpenSSL is installed otherwise you need to install OpenSSL with
+If it returns then a version OpenSSL is installed. Otherwise you need to install OpenSSL with:
 ----
 sudo dnf install -y openssl
 ----
