AAP-30415 Describe Ansible language file association

--- a/downstream/modules/devtools/proc-devtools-install-vscode-extension.adoc
+++ b/downstream/modules/devtools/proc-devtools-install-vscode-extension.adoc
@@ -18,11 +18,16 @@ To install the Ansible {VSCode} extension:
 . In the search field in the *Extensions* view, type `Ansible Red Hat`. 
 . Select the Ansible extension and click btn:[Install].
 
-.Verification
-
-When the Ansible extension is enabled, create or open a `.yml` file in VS Code. It can be an empty file.
-The  language identified for the .yml file is Ansible.
-It is displayed in the Status bar.
-
 When the language for a file is recognized as Ansible, the Ansible extension provides features such as auto-completion, hover, diagnostics, and goto.
+The language identified for a file is displayed in the Status bar at the bottom of the {VSCode} window.
+
+The following files are assigned the Ansible language:
+
+* YAML files in a `/playbooks` directory 
+* Files with the following double extension: `.ansible.yml` or `.ansible.yaml`
+* Certain YAML names recognized by Ansible, for example `site.yml` or `site.yaml`
+* YAML files whose filename contains "playbook": `*playbook*.yml` or `*playbook*.yaml`
+
+If the extension does not identify the language for your playbook files as Ansible, follow the procedure in 
+xref:devtools-extension-set-language_installing-devtools[Associating the Ansible language to YAML files].
 
