--- a/downstream/assemblies/devtools/assembly-devtools-install.adoc
+++ b/downstream/assemblies/devtools/assembly-devtools-install.adoc
@@ -18,6 +18,7 @@ include::devtools/proc-devtools-setup-registry-redhat-io.adoc[leveloffset=+2]
 include::devtools/proc-devtools-install-vsc.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-vscode-extension.adoc[leveloffset=+1]
 include::devtools/proc-devtools-extension-settings.adoc[leveloffset=+1]
+include::devtools/proc-devtools-extension-set-language.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-container.adoc[leveloffset=+1]
 include::devtools/proc-devtools-install-rpm.adoc[leveloffset=+1]
 
