Change devtools name to Development tools

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -110,7 +110,7 @@
 :Runner: Ansible Runner
 :Role: Role ARG Spec
 
-// Ansible developer tools
+// Ansible development tools
 :ToolsName: Ansible development tools
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
 :RHDH: Red Hat Developer Hub
