--- a/downstream/modules/devtools/con-devtools-requirements.adoc
+++ b/downstream/modules/devtools/con-devtools-requirements.adoc
@@ -4,8 +4,8 @@
 
 // [role="_abstract"]
 
-* Ansible developer tools require Python 3.10 or later.
-* Ansible developer tools require {VSCode} (Visual Studio Code) with the Ansible extension added. See xref:devtools-install-vsc_installing-devtools[Installing {VScode}].
+* {ToolsName} require Python 3.10 or later.
+* {ToolsName} require {VSCode} (Visual Studio Code) with the Ansible extension added. See xref:devtools-install-vsc_installing-devtools[Installing {VScode}].
 * You have installed a containerization platform, for example Podman, Podman Desktop, Docker, or Docker Desktop.
 * You have a Red Hat account and you can log in to the Red Hat container registry at `registry.redhat.io`.
 For information about logging in to `registry.redhat.io`, see
