--- a/downstream/modules/platform/con-gs-developer-tools.adoc
+++ b/downstream/modules/platform/con-gs-developer-tools.adoc
@@ -1,8 +1,8 @@
 [id="con-gs-developer-tools"]
 
-= Ansible developer tools
+= {ToolsName}
 
-Ansible development tools are an integrated and supported suite of capabilities that help IT practitioners at any skill level accurately create automation content faster than with manual coding. 
+{ToolsName} are an integrated and supported suite of capabilities that help IT practitioners at any skill level accurately create automation content faster than with manual coding. 
 This includes building, testing, and deploying modules and playbooks without requiring hard coding skills.
 
 These tools include:
