--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -109,7 +109,7 @@
 :Runner: Ansible Runner
 :Role: Role ARG Spec
 
-// Ansible developer tools
+// Ansible development tools
 :ToolsName: Ansible development tools
 :Test: Ansible-test
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
