Pre-release updates to Using automation execution
https://issues.redhat.com/browse/AAP-31370

Affects `titles/controller-user-guide`

--- a/downstream/assemblies/platform/assembly-controller-topology-viewer.adoc
+++ b/downstream/assemblies/platform/assembly-controller-topology-viewer.adoc
@@ -1,8 +1,8 @@
 [id="assembly-controller-topology-viewer"]
 
-= Topology viewer
+= Topology View
 
-Use the topology viewer to view node type, node health, and specific details about each node if you already have a mesh topology deployed. 
+Use the *Topology View* to view node type, node health, and specific details about each node if you already have a mesh topology deployed. 
 
 To access the topology viewer from the {ControllerName} UI, you must have *System Administrator* permissions. 
 
