--- a/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-jobs.adoc
@@ -27,7 +27,7 @@ image::ug-job-details-view-filters.png[Job details view filters]
 * The *Event*  option in the *Search output* list enables you to filter by the events of interest, such as errors, host failures, host retries, and items skipped. 
 You can include as many events in the filter as necessary.
 //* The *Advanced* option is a refined search that gives you a combination of including or excluding criteria, searching by key, or by lookup type. 
-For more information on using the search, refer to the xref:assembly-controller-search[Search] section.
+For more information about using the search, see the xref:assembly-controller-search[Search] section.
 
 include::platform/con-controller-inventory-sync-jobs.adoc[leveloffset=+1]
 include::platform/ref-controller-inventory-sync-details.adoc[leveloffset=+2]
