--- a/downstream/assemblies/platform/assembly-ug-controller-notifications.adoc
+++ b/downstream/assemblies/platform/assembly-ug-controller-notifications.adoc
@@ -1,6 +1,6 @@
 [id="controller-notifications"]
 
-= Notifications
+= Notifiiera
 
 A xref:controller-notification-types[Notification type] such as Email, Slack or a Webhook, is an instance of a Notification Template, and has a name, description and configuration defined in the Notification template. 
 
