--- a/downstream/modules/platform/ref-controller-scm-inventory-details.adoc
+++ b/downstream/modules/platform/ref-controller-scm-inventory-details.adoc
@@ -2,9 +2,9 @@
 
 = SCM inventory details
 
-To view details about the job execution and its associated project, select the *Access* tab.
+To view details about the job execution and its associated project, select the *Details* tab.
 
-image::ug-details-for-scm-job.png[Details for SCM job]
+//image::ug-details-for-scm-job.png[Details for SCM job]
 
 You can view the following details for an executed job:
 
@@ -25,4 +25,4 @@ Reasons for SCM jobs not being ready include dependencies that are currently run
 * *Instance Group*: Indicates the instance group on which the job ran, if specified.
 * *Job Tags*: Tags show the various job operations executed.
 
-Selecting these items enables you to view the corresponding job templates, projects, and other objects.
+Select these items to view the corresponding job templates, projects, and other objects.
