--- a/downstream/modules/platform/con-controller-administration.adoc
+++ b/downstream/modules/platform/con-controller-administration.adoc
@@ -8,7 +8,7 @@ From here, you can create, view, and edit:
 //activity stream is an unconnected procedure. It needs a home.
 * xref:assembly-controller-activity-stream[Activity Stream]
 * xref:controller-approval-nodes[Workflow Approvals]
-* xref:controller-notifications[Notifications]
+* xref:controller-notifications[Notifiers]
 * link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-management-jobs[Management Jobs]
 
 
