--- a/downstream/modules/platform/con-controller-overview-details.adoc
+++ b/downstream/modules/platform/con-controller-overview-details.adoc
@@ -91,7 +91,7 @@ For more information, see xref:proc-controller-inv-source-satellite[Red Hat Sate
 
 * Red Hat Insights integration, enabling Insights playbooks to be used as an {PlatformNameShort} project.
 
-For more information, see xref:controller-setting-up-insights[Setting up Insights Remediations].
+For more information, see xref:controller-setting-up-insights[Setting up Red Hat Insights for {PlatformName} Remediations].
 
 * {HubNameStart} acts as a content provider for {ControllerName}, requiring both an {ControllerName} deployment and an {HubName} deployment running alongside each other.
 
