--- a/downstream/modules/platform/con-controller-settings.adoc
+++ b/downstream/modules/platform/con-controller-settings.adoc
@@ -2,12 +2,16 @@
 
 = The Settings menu
 
-You can configure some {ControllerName} options using the *Settings* menu of the User Interface. 		
-
+You can configure some {ControllerName} options by using the *Settings* menu of the User Interface. 		
 
 The *Settings* page enables an administrator to configure the following:
 
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-subscriptions[Subscriptions]
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-system[System]
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#controller-configure-jobs[Jobs]
-* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-analytics[{Analytics}]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/access_management_and_authentication/index#proc-controller-configure-subscriptions[Subscription]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/access_management_and_authentication/index#proc-settings-platform-gateway[Platform gateway]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatfromVers}/html/access_management_and_authentication/index#proc-settings-user-preferences[User Preferences]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/configuring_automation_execution/index#proc-controller-configure-subscriptions[System]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/configuring_automation_execution/index#controller-configure-jobs[Job]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/configuring_automation_execution/index#proc-controller-set-up-logging[Logging]
+* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/access_management_and_authentication/index#proc-settings-troubleshooting[Troubleshooting]
+// [emcwhinn] Analytics has its own section in 2.5 UI
+//* link:{BaseURL}/documentation/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-ag-controller-config#proc-controller-configure-analytics[{Analytics}]
