--- a/downstream/modules/platform/con-controller-playbook-run-jobs.adoc
+++ b/downstream/modules/platform/con-controller-playbook-run-jobs.adoc
@@ -5,7 +5,7 @@
 When a playbook is executed, the results display in the *Output* tab. 
 If used, the Ansible CLI displays the same information. This can be useful for debugging.
 
-image::ug-results-for-example-job.png[Results for example job]
+//image::ug-results-for-example-job.png[Results for example job]
 
 The events summary displays the following events that are run as part of this playbook:
 
