Tech review edits

--- a/downstream/modules/platform/ref-controller-scm-inv-source-fields.adoc
+++ b/downstream/modules/platform/ref-controller-scm-inv-source-fields.adoc
@@ -36,7 +36,7 @@ You can perform an inventory update while a related job is running.
 
 {ControllerNameStart} uses the `ansible-inventory` module from Ansible to process inventory files, and supports all valid inventory syntax that {ControllerName} requires.
 
-The following is an example of a working example of JSON output that {ControllerName} can read in:
+The following is a working example of JSON output that {ControllerName} can read for the import:
 
 ----
 {
@@ -84,3 +84,5 @@ The following is an example of a working example of JSON output that {Controller
     }
 } 
 ----
+
+For information on how to implement the inventory script, see the support article, link:https://access.redhat.com/solutions/6997130[How to migrate inventory scripts from Red Hat Ansible tower to Red Hat Ansible Automation Platform?].
