AAP-29296-C added ref architectures in ch 2

--- a/downstream/assemblies/platform/assembly-aap-architecture.adoc
+++ b/downstream/assemblies/platform/assembly-aap-architecture.adoc
@@ -5,3 +5,5 @@
 As a modular platform, {PlatformNameShort} provides the flexibility to easily integrate components and customize your deployment to best meet your automation requirements. The following section provides a comprehensive architectural example of an {PlatformNameShort} deployment.
 
 include::platform/con-aap-example-architecture.adoc[leveloffset=+1]
+include::platform/ref-example-CONT-architecture.adoc[leveloffset=+1]
+include::platform/ref-example-OCP-architecture.adoc[leveloffset=+1]
