--- a/downstream/modules/platform/con-aap-example-architecture.adoc
+++ b/downstream/modules/platform/con-aap-example-architecture.adoc
@@ -20,5 +20,4 @@ The architecture for this example consists of the following:
 * Two execution nodes per  {ControllerName} cluster
 
 .Example {PlatformNameShort} {PlatformVers} architecture
-// dcd - Image in progress with graphics team and will be added once complete.
-image::aap_ref_arch_2.4.png[Reference architecture for an example setup of a standard {PlatformNameShort} deployment]
+image::rpm-b-env-a.png[Reference architecture for an example setup of a standard {PlatformNameShort} deployment]
