--- a/downstream/assemblies/platform/assembly-aap-platform-components.adoc
+++ b/downstream/assemblies/platform/assembly-aap-platform-components.adoc
@@ -10,6 +10,8 @@ ifdef::context[:parent-context: {context}]
 [role="_abstract"]
 {PlatformNameShort} is a modular platform composed of separate components that can be connected together to meet your deployment needs. {PlatformNameShort} deployments start with {ControllerName} which is the enterprise framework for controlling, securing, and managing Ansible automation with a user interface (UI) and RESTful application programming interface (API). Then, you can add to your deployment any combination of the following automation platform components:
 
+include::platform/con-about-platform-gateway.adoc[leveloffset=+1]
+
 include::platform/con-about-automation-hub.adoc[leveloffset=+1]
 
 include::platform/con-about-pa-hub.adoc[leveloffset=+1]
