--- a/downstream/assemblies/platform/assembly-inventory-introduction.adoc
+++ b/downstream/assemblies/platform/assembly-inventory-introduction.adoc
@@ -70,6 +70,7 @@ The first part of the inventory file specifies the hosts or groups that Ansible 
 
 For more information on `registry_username` and `registry_password`, see {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/planning_your_installation/about_the_installer_inventory_file#about_the_installer_inventory_file[Setting registry_username and registry_password].
 
+include::snippets/snip-gateway-component-description.adoc[leveloffset=+1]
 include::platform/ref-guidelines-hosts-groups.adoc[leveloffset=+1]
 include::platform/ref-deprovisioning.adoc[leveloffset=+1]
 include::platform/con-inventory-variables-intro.adoc[leveloffset=+1]
