--- a/downstream/modules/platform/ref-guidelines-hosts-groups.adoc
+++ b/downstream/modules/platform/ref-guidelines-hosts-groups.adoc
@@ -31,10 +31,13 @@ If you use one value in `[database]` and both {ControllerName} and {HubNameMain}
 
 .{ControllerNameStart}
 * {ControllerNameStart} does not configure replication or failover for the database that it uses.
-* {ControllerName} works with any replication that you have.
+* {ControllerNameStart} works with any replication that you have.
 
 .{EDAcontroller}
 * {EDAcontroller} must be installed on a separate server and cannot be installed on the same host as {HubName} and {ControllerName}.
+
+.Platform gateway
+* The platform gateway is the service that handles authentication and authorization for {PlatformNameShort}. It provides a single entry into the platform and serves the platform’s user interface.
 
 .Clustered installations
 * When upgrading an existing cluster, you can also reconfigure your cluster to omit existing instances or instance groups. 
