adds snippets directory and adds snippets to conceptual overview

--- a/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
+++ b/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
@@ -15,6 +15,9 @@ endif::[]
 
 With {PlatformNameShort}, you can create, manage, and scale automation for your organization across users, teams, and regions. 
 
+include::snippets/snip-gateway-component-description.adoc[leveloffset=+1] 
+include::snippets/con-gw-activity-stream.adoc[leveloffset=+1] 
+
 See the following functionality and concepts of {PlatformNameShort} for more details. 
 
 include::platform/con-gs-automation-execution.adoc[leveloffset=+1]
