adds drafted content to conceptual overview assembly

--- a/downstream/modules/platform/con-gs-dashboard-components.adoc
+++ b/downstream/modules/platform/con-gs-dashboard-components.adoc
@@ -2,8 +2,6 @@
 
 = Dashboard components
 
-//ADD SCREENSHOT??
-
 After you install {PlatformNameShort} on your system and log in for the first time, familiarize yourself with the platform dashboard. 
 
 Quick starts::
@@ -18,7 +16,7 @@ The status indicator links to your configured hosts, projects and inventories wh
 
 Job Activity::
 You can view a summary of your current job status. 
-Filter the job status within a period of time or by job type, or click btn:[View all jobs] to view a complete list of jobs that are currently available.
+Filter the job status within a period of time or by job type, or click btn:[Go to jobs] to view a complete list of jobs that are currently available.
 
 Jobs::
 You can view recent jobs that have run, or click btn:[View all Jobs] to view a complete list of jobs that are currently available, or create a new job. 
