--- a/downstream/modules/platform/con-gs-automation-mesh.adoc
+++ b/downstream/modules/platform/con-gs-automation-mesh.adoc
@@ -3,7 +3,7 @@
 = {AutomationMeshStart}
 
 {AutomationMeshStart} is an overlay network intended to ease the distribution of automation across a collection of execution nodes using existing connectivity.
-Execution nodes are where Ansible Playbooks are actually executed. 
+Execution nodes are where link:https://www.redhat.com/en/topics/automation/what-is-an-ansible-playbook[Ansible Playbooks] are actually executed. 
 A node runs an {ExecEnvNameSing} which, in turn, runs the Ansible Playbook. 
 {AutomationMeshStart} creates peer-to-peer connections between these execution nodes, increasing the resiliency of your automation workloads to network latency and connection disruptions. 
 This also permits more flexible architectures and provides rapid, independent scaling of control and execution capacity.
