--- a/downstream/modules/platform/con-gs-final-set-up.adoc
+++ b/downstream/modules/platform/con-gs-final-set-up.adoc
@@ -1,10 +1,10 @@
 [id="con-gs-final-set-up"]
 
-= Final setup and usage 
+= Using this guide
 
 After you have installed {PlatformNameShort} 2.5 and have become familiar with the dashboard, use this document to explore further options for setup and daily use. 
 This guide is structured so that you can select the path that is most appropriate to you and your role within your organization. 
-You can also use the navigation panel to learn how Ansible empowers users with different roles and objectives to build and customize automation tasks.
+We also encourage you to explore the other paths outlined in this guide to learn how Ansible empowers users with various roles and objectives to build and customize automation tasks.
 
 Select one of the following paths to continue getting started: 
 
