AAP-30592 - Divide the Platform gateway settings into separate procedures by option

--- a/downstream/modules/platform/proc-controller-configure-subscriptions.adoc
+++ b/downstream/modules/platform/proc-controller-configure-subscriptions.adoc
@@ -5,18 +5,13 @@
 You can use the *Subscription* menu to view the details of your subscription, such as compliance, host-related statistics, or expiry, or you can apply a new subscription.
 
 .Procedure
-. From the navigation panel, select {MenuSetSubscription}.
-The *Subscription* page is displayed.
-+
-image::settings_subscription_page.png[Initial subscriptions page]
+. From the navigation panel, select {MenuSetSubscription}. The *Subscription* page is displayed.
+//[ddacosta] - Removing images but they can be added back if requested.
+//image::settings_subscription_page.png[Initial subscriptions page]
 . Click btn:[Edit subscription].
 . You can either enter your Red Hat Username and Password, or attach a current Subscription Manifest in the *Welcome* page.
-+
-image::subscriptions_first-page.png[Suscriptions page for password or manifest]
-+ 
-. Click btn:[Next].
-The *{Analytics}* page is displayed.
-+
-image::automation_analytics.png[Automation analytics page]
-. Select the checkbox to use analytics data to enhance future releases of {PlatformNameShort} and to give the Red Hat insights service to subscribers.
+//[ddacosta] - Removing images but they can be added back if requested.
+//image::subscriptions_first-page.png[Suscriptions page for password or manifest]
 . Click btn:[Next] and agree to the terms of the license agreement.
+. Click btn:[Next] to review the subscription settings.
+. Click btn:[Finish] to complete the configuration.
