--- a/downstream/modules/platform/proc-settings-user-preferences.adoc
+++ b/downstream/modules/platform/proc-settings-user-preferences.adoc
@@ -14,37 +14,37 @@ User preferences are stored locally in your browser. This means that they are un
 .Procedure
 
 . From the navigation panel, select {MenuSetUserPref}.
-//No Edit button, page is displayed as if an edit button has been clicked.
-+
-image::user_preferences_page.png[User preferences options]
-. The *User preferences page* is displayed. Set the configurable options from the fields provided. Click the tooltip icon next to the field that you need additional information about.
+. The *User preferences page* is displayed. 
+. Click btn:[Edit]. 
 . You can configure the following options:
-
++
 * *Refresh interval*: Select the refresh interval for the page.
 +
 This refreshes the data on the page at the selected interval.
 +
 The refresh happens in the background and does not reload the page.
-
++
 * *Color Theme*: Select from:
 ** Dark theme
 ** Light theme
 ** System default
-
++
 * *Table Layout*: Select from:
 ** Comfortable
 ** Compact
-
++
 * *Form Columns*: Select from:
 ** Multiple columns of inputs
 ** Single column of inputs
-
++
 * *Form Labels*: Select from:
 ** Labels above inputs
 ** Labels beside inputs
-
++
 * *Date Format* Select from
 ** Shows dates relative to the current time
 ** Shows dates as date and time
-
++
 * *Preferred Date Format*: Sets the default format for when editing date fields.
++
+. Click btn:[Save user preferences].
