--- a/downstream/modules/platform/con-gs-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-automation-content.adoc
@@ -3,7 +3,7 @@
 = Automation content
 
 {HubNameStart} is the central location for your {PlatformNameShort} content. 
-In {HubName} you can also find content collections that you can download and integrate into your automation environment. You can also create an upload your own content to distribute to your users.
+In {HubName} you can also find content collections that you can download and integrate into your automation environment. You can also create and upload your own content to distribute to your users.
 
 An Ansible Content Collection is a ready-to-use toolkit for automation and can include multiple types of content, including roles, modules, playbooks, and plugins all in one place.  
 
@@ -20,7 +20,7 @@ There are two types of Red Hat Ansible content:
 Certified collections are included in your subscription to {PlatformName} and can be found in {HubName}.
 * {Valid} collections, which are customizable and therefore do not have a support guarantee, but have been tested in the {PlatformNameShort} environment. 
 
-For more information about Ansible content, see xref:tbd[Create automation content] in xref:tbd{Getting started as an automation developer}.
+For more information about Ansible content, see xref:platform/con-gs-create-automation-content.adoc[Create automation content] in xref:assembly-gs-auto-dev[Getting started as an automation developer].
 
 == Ansible roles
 
