--- a/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
+++ b/downstream/assemblies/platform/assembly-gs-key-functionality.adoc
@@ -15,7 +15,7 @@ endif::[]
 
 With {PlatformNameShort}, you can create, manage, and scale automation for your organization across users, teams, and regions. See the following functionality and concepts of {PlatformNameShort} for more details. 
 
-The release of {PlatformNameShort} 2.5 introduces an updated, unified user interface (UI) that allows you to interact with and manage each component part of the platform.
+The release of {PlatformNameShort} {PlatformVers} introduces an updated, unified user interface (UI) that allows you to interact with and manage each part of the platform.
 
 include::snippets/snip-gateway-component-description.adoc[leveloffset=+1] 
 include::platform/con-gw-activity-stream.adoc[leveloffset=+1] 
