--- a/downstream/modules/platform/con-gs-automation-content.adoc
+++ b/downstream/modules/platform/con-gs-automation-content.adoc
@@ -44,7 +44,7 @@ You can use playbooks to manage configurations of and deployments to remote mach
 
 Once written, you can use and re-use playbooks for automation across your enterprise. 
 For example, if you need to run a task more than once, write a playbook and put it under source control. 
-Then you can use the playbook to push out new configuration or confirm the configuration of remote systems. 
+Then, you can use the playbook to push out new configuration or confirm the configuration of remote systems. 
 
 Ansible playbooks can declare configurations, orchestrate steps of any manually ordered process on many machines in a defined order, or start tasks synchronously or asynchronously. 
 
