--- a/downstream/modules/platform/con-gs-developer-tools.adoc
+++ b/downstream/modules/platform/con-gs-developer-tools.adoc
@@ -3,4 +3,4 @@
 = {ToolsName}
 
 {ToolsName} are an integrated and supported suite of capabilities that help IT practitioners at any skill level generate automation content faster than they might with manual coding. 
-{ToolsName} can help you create, test, and deploy automation content like playbooks, {ExecEnvShort}s, and collections quickly and accurately using recommended practices. For more information on how {ToolsName} can help you create automation content, see our documentation on link:https://docs.redhat.com/en/documentation/red_hat_ansible_automation_platform/2.4/html/developing_ansible_automation_content/index[Developing Ansible automation content].
+{ToolsName} can help you create, test, and deploy automation content like playbooks, {ExecEnvShort}s, and collections quickly and accurately using recommended practices. For more information on how {ToolsName} can help you create automation content, see our documentation on link:{LinkDevelopAutomationContent}.
