--- a/downstream/modules/platform/con-gs-final-set-up.adoc
+++ b/downstream/modules/platform/con-gs-final-set-up.adoc
@@ -2,7 +2,7 @@
 
 = Using this guide
 
-After you have installed {PlatformNameShort} 2.5 and have become familiar with the dashboard, use this document to explore further options for setup and daily use. 
+After you have installed {PlatformNameShort} {PlatformVers} and have become familiar with the dashboard, use this document to explore further options for setup and daily use. 
 This guide is structured so that you can select the path that is most appropriate to you and your role within your organization. 
 We also encourage you to explore the other paths outlined in this guide to learn how Ansible empowers users with various roles and objectives to build and customize automation tasks.
 
