AAP-29296-E updated tested deployment models (#1962)
* AAP-29296-E updated tested deployment models

* AAP-29296-E updated tested deployment models

--- a/downstream/titles/aap-planning-guide/master.adoc
+++ b/downstream/titles/aap-planning-guide/master.adoc
@@ -23,4 +23,5 @@ include::platform/assembly-network-ports-protocols.adoc[leveloffset=+1]
 // emurtough removed subscription info to avoid duplication within Access management and authentication include::platform/assembly-attaching-subscriptions.adoc[leveloffset=+1]
 include::platform/assembly-choosing-obtaining-installer.adoc[leveloffset=+1]
 include::platform/assembly-inventory-introduction.adoc[leveloffset=+1]
-include::platform/assembly-supported-installation-scenarios.adoc[leveloffset=+1]
+// emurtough removed to avoid duplication with topologies docs include::platform/assembly-supported-installation-scenarios.adoc[leveloffset=+1]
+include::../topologies/topologies/assembly-overview-tested-deployment-models.adoc[leveloffset=+1]
