--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -114,6 +114,7 @@
 :Test: Ansible-test
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
 :RHDH: Red Hat Developer Hub
+:RHDHVers: 1.2
 :RHDHShort: RHDH
 :Builder: Ansible Builder
 :Navigator: automation content navigator
