AAP-29296-F added HA redis content

--- a/downstream/modules/platform/con-gw-clustered-redis.adoc
+++ b/downstream/modules/platform/con-gw-clustered-redis.adoc
@@ -18,6 +18,7 @@ If a primary instance becomes unavailable due to failures, the other primary nod
 image::gw-clustered-redis.png[Single-node Redis deployment]
 
 The benefits of deploying clustered Redis over single-node Redis include the following:
+
 * Data is automatically split across multiple nodes.
 * Data can be dynamically adjusted.
 * Automatic failover of the primary nodes is initiated during system failures.
@@ -26,4 +27,4 @@ Therefore, if you need data scalability and automatic failover, deploy {Platform
 
 For information on deploying {PlatformNameShort} with clustered Redis, refer to the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/containerized_installation[{TitleContainerizedInstall}] guide or the link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/installing_on_openshift_container_platform[{TitleOperatorInstallation}] guide.
 
-include::snippets/external-site-disclaimer.adoc[]
+// include::snippets/external-site-disclaimer.adoc[]
