AAP-29296-A updated system reqs

--- a/downstream/modules/platform/ref-containerized-system-requirements.adoc
+++ b/downstream/modules/platform/ref-containerized-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for containerized installation of {PlatformNameShort}
 
-When installing the containerized version of {PlatformNameShort}, use the system requirements identified in Ch 1 System requirements[LINK] of Containerized installation[LINK].
+When installing the containerized version of {PlatformNameShort}, use the system requirements identified in xref:[System requirements] of _Containerized installation_.
