AAP-31307a Add title, URL attributes for Lightspeed (#1959)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -429,3 +429,8 @@
 :TitleTopologies: Tested deployment models
 :URLTopologies: {BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/tested_deployment_models
 :LinkTopologies: {URLTopologies}[{TitleTopologies}]
+//
+// Lightspeed branch titles/lightspeed-user-guide
+:TitleLightspeedUserGuide: Red Hat Ansible Lightspeed with IBM watsonx Code Assistant User Guide
+:URLLightspeedUserGuide: {BaseURL}/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant/2.x_latest/html-single/red_hat_ansible_lightspeed_with_ibm_watsonx_code_assistant_user_guide
+:LinkLightspeedUserGuide: {URLLightspeedUserGuide}[{TitleLightspeedUserGuide}]
