AAP-29296-A updated system requirements section

--- a/downstream/modules/platform/ref-OCP-system-requirements.adoc
+++ b/downstream/modules/platform/ref-OCP-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for installing {PlatformName} on OpenShift Container Platform
 
-When installing {PlatformNameShort} on OpenShift Container Platform, use the system requirements identified in Ch 4.1.2 Tested system configurations[LINK] of Operator growth topology[LINK].
+When installing {PlatformNameShort} on OpenShift Container Platform, use the system requirements identified in the xref:[Tested system configurations] section of the _Operator enterprise topology_ guide.
