--- a/downstream/modules/platform/ref-RPM-system-requirements.adoc
+++ b/downstream/modules/platform/ref-RPM-system-requirements.adoc
@@ -4,4 +4,4 @@
 
 = System requirements for RPM installation
 
-When using the RPM installation method for {PlatformNameShort}, use the system requirements identified in  Ch 2 System requirements[LINK] of RPM Installation[LINK].
+When using the RPM installation method for {PlatformNameShort}, use the system requirements identified in the xref:[System requirements] section of the _RPM Installation_ guide.
