AAP-29296-A updated system requirements section

--- a/downstream/assemblies/platform/assembly-system-requirements.adoc
+++ b/downstream/assemblies/platform/assembly-system-requirements.adoc
@@ -13,6 +13,7 @@ Use this information when planning your {PlatformName} installations and designi
 * You can de-escalate privileges from root to users such as: AWX, PostgreSQL, {EDAName}, or Pulp.
 * You have configured an NTP client on all nodes. For more information, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/red_hat_ansible_automation_platform_upgrade_and_migration_guide/migrate-isolated-execution-nodes#automation_controller_configuration_requirements[Configuring NTP server using Chrony].
 
+// emurtough archived the commented out files to address duplication across 2.5 doc set 9/18/2024
 // include::platform/ref-system-requirements.adoc[leveloffset=+1]
 include::platform/ref-RPM-system-requirements.adoc[leveloffset=+1]
 include::platform/ref-containerized-system-requirements.adoc[leveloffset=+1]
